# MemoPy

./: LICENSE  invoke.py  myModule.py  my_exception.py  pa.py  pyproject.toml  walrus.py  week_day.py
0.Basic/: annotation.py  class_super.py  for_loop.py  import_module.py  my_schedule.py  namedtuple_.py  process_bar.py  remember.py  sort_func.py  sys.exit.cmd
1.FunctionParameter/: 1. unpacking.py  2. assignment.py  assignment.py  function_default_value.py  function_parameter.py  invoke.py  unpacking.py
1.basic/: assignment.py
2.Map_Filter_Zip_and_list_generator_comprehension/: 1.map.py  2.filter.py  3.zip.py  4.reduce.py  filter.py  generator_comprehension.py  list_comprehensions.py  map.py  reduce.py  zip.py
3.LambdaExpression/: main.py  sorting.py
4.FunctionIntrospection/: func_name.py  inspect1.py  inspect2.py  main.py
5.Callable/: main.py  my__call__.py
7.Asyncio/: 3_create_task.py  4.1_gather.py  5.1_run_in_executor.py  5.2_run_in_executor.py  5.4_ThreadPoolExecutor_timeout.py  5.5_ThreadPoolExecutor_timeout.py  5.7_ThreadPoolExecutor_timeout.py  loop.py  need_lock.py  task_cancel.py  task_cancel_mulitiple_threads_N.py  task_timeout.py  to_thread.py
7.HigherOrderFunctions/: README.md  filter_.py  map_.py  reduce_.py  zip_.py
7.ReducingFunctions/: reduce_.py
ABC/: fruit.py  main.py
DesignPattern/: memento.py
DunderFunc/: and_or__.py  call__.py  iter__.py  new__.py
Enumeration/: alias_main.py  enum_main.py  main.py
FunctionParameters/: argument_vs_parameter.py
__DunderFunc__/: __and__or__invert__.py  __call__.py  __dict__.py  __hash__.py  (+5 more)
(+147 files in other folders)
