[project]
name = "memopy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cron-descriptor>=1.4.5",
    "crontab>=1.0.4",
    "fastapi==0.115.13",
    "httpx>=0.28.1",
    "pydantic>=1.10.22",
    "pyjwt[crypto]>=2.10.1",
    "pymysql>=1.1.1",
    "pytest>=8.3.5",
    "pytest-xdist>=3.7.0",
    "pytz>=2025.2",
    "requests>=2.32.3",
    "rich>=14.0.0",
    "sqlalchemy>=2.0.40",
]

[tool.uv.workspace]
members = [
    "99.Lib/Pydantic",
    "99.Lib/Pydantic2",
]

[dependency-groups]
dev = [
    "ruff>=0.12.1",
]
